--- a/node/package.json
+++ b/node/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "actions-on-google": "^2.2.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "luxon": "^1.3.3"
   }
 }
