--- a/jvm/.gitignore
+++ b/jvm/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/kotlin,intellij+all
+# Created by https://www.gitignore.io/api/gradle,kotlin,intellij+all
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -101,5 +101,21 @@ modules.xml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+### Gradle ###
+.gradle
+/build/
 
-# End of https://www.gitignore.io/api/kotlin,intellij+all
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+
+# End of https://www.gitignore.io/api/gradle,kotlin,intellij+all
